tests/snapshots/files__quicksort_small-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 94
@qsort(v0: ptr<int>, v1: int, v2: int) {
  v3_: bool = ge v1 v2;
  c4_: int = const 0;
  v5_: bool = lt v2 c4_;
  v6_: bool = or v3_ v5_;
  br v6_ .b7_ .b8_;
.b7_:
  ret;
  jmp .b9_;
.b8_:
  c10_: int = const 1;
  v11_: bool = lt v1 v2;
  v12_: ptr<int> = ptradd v0 v2;
  v13_: int = load v12_;
  c14_: int = const -1;
  v15_: int = add c14_ v1;
  v16_: int = id v15_;
  v17_: ptr<int> = id v12_;
  v18_: int = id v13_;
  v19_: ptr<int> = id v0;
  v20_: int = id c10_;
  v21_: int = id v1;
  v22_: int = id v2;
  br v11_ .b23_ .b24_;
.b23_:
  v25_: int = id v15_;
  v26_: ptr<int> = id v12_;
  v27_: int = id v13_;
  v28_: ptr<int> = id v0;
  v29_: int = id c10_;
  v30_: int = id v1;
  v31_: int = id v2;
.b32_:
  v33_: ptr<int> = ptradd v28_ v30_;
  v34_: int = load v33_;
  v35_: bool = le v34_ v27_;
  c36_: bool = const true;
  v37_: int = id v25_;
  v38_: ptr<int> = id v26_;
  v39_: int = id v27_;
  v40_: ptr<int> = id v28_;
  v41_: int = id v29_;
  v42_: bool = id c36_;
  v43_: int = id v30_;
  v44_: int = id v31_;
  br v35_ .b45_ .b46_;
.b45_:
  v47_: int = add v25_ v29_;
  v48_: ptr<int> = ptradd v28_ v47_;
  v49_: int = load v48_;
  store v33_ v49_;
  store v48_ v34_;
  c50_: bool = const true;
  v37_: int = id v47_;
  v38_: ptr<int> = id v26_;
  v39_: int = id v27_;
  v40_: ptr<int> = id v28_;
  v41_: int = id v29_;
  v42_: bool = id c50_;
  v43_: int = id v30_;
  v44_: int = id v31_;
.b46_:
  v51_: int = add v29_ v30_;
  v52_: bool = lt v51_ v31_;
  v25_: int = id v37_;
  v53_: ptr<int> = id v26_;
  v54_: int = id v27_;
  v55_: ptr<int> = id v28_;
  v56_: int = id v29_;
  v30_: int = id v51_;
  v57_: int = id v31_;
  v26_: ptr<int> = id v53_;
  v27_: int = id v54_;
  v28_: ptr<int> = id v55_;
  v29_: int = id v56_;
  v31_: int = id v57_;
  br v52_ .b32_ .b58_;
.b58_:
  v16_: int = id v25_;
  v17_: ptr<int> = id v26_;
  v18_: int = id v27_;
  v19_: ptr<int> = id v28_;
  v20_: int = id v29_;
  v21_: int = id v30_;
  v22_: int = id v31_;
.b24_:
  v59_: int = add c10_ v16_;
  v60_: int = add c10_ v59_;
  v61_: int = add c10_ v60_;
  v62_: bool = lt v2 v61_;
  c63_: int = const 0;
  v64_: bool = lt v2 c63_;
  v65_: bool = or v62_ v64_;
  v66_: int = add c10_ v1;
  v67_: bool = lt v16_ v66_;
  v68_: bool = lt v16_ c63_;
  v69_: bool = or v67_ v68_;
  v70_: ptr<int> = ptradd v19_ v59_;
  v71_: int = load v70_;
  store v70_ v13_;
  store v17_ v71_;
  br v69_ .b72_ .b73_;
.b73_:
  c74_: int = const 1;
  v75_: bool = lt v1 v16_;
  v76_: ptr<int> = ptradd v0 v16_;
  v77_: int = load v76_;
  v78_: int = id v15_;
  v79_: ptr<int> = id v76_;
  v80_: int = id v77_;
  v81_: ptr<int> = id v0;
  v82_: int = id c74_;
  v83_: int = id v1;
  v84_: int = id v16_;
  br v75_ .b85_ .b86_;
.b85_:
  v87_: int = id v15_;
  v88_: ptr<int> = id v76_;
  v89_: int = id v77_;
  v90_: ptr<int> = id v0;
  v91_: int = id c74_;
  v92_: int = id v1;
  v93_: int = id v16_;
.b94_:
  v95_: ptr<int> = ptradd v90_ v92_;
  v96_: int = load v95_;
  v97_: bool = le v96_ v89_;
  c98_: bool = const true;
  v99_: int = id v87_;
  v100_: ptr<int> = id v88_;
  v101_: int = id v89_;
  v102_: ptr<int> = id v90_;
  v103_: int = id v91_;
  v104_: bool = id c98_;
  v105_: int = id v92_;
  v106_: int = id v93_;
  br v97_ .b107_ .b108_;
.b107_:
  v109_: int = add v87_ v91_;
  v110_: ptr<int> = ptradd v90_ v109_;
  v111_: int = load v110_;
  store v95_ v111_;
  store v110_ v96_;
  c112_: bool = const true;
  v99_: int = id v109_;
  v100_: ptr<int> = id v88_;
  v101_: int = id v89_;
  v102_: ptr<int> = id v90_;
  v103_: int = id v91_;
  v104_: bool = id c112_;
  v105_: int = id v92_;
  v106_: int = id v93_;
.b108_:
  v113_: int = add v91_ v92_;
  v114_: bool = lt v113_ v93_;
  v87_: int = id v99_;
  v115_: ptr<int> = id v88_;
  v116_: int = id v89_;
  v117_: ptr<int> = id v90_;
  v118_: int = id v91_;
  v92_: int = id v113_;
  v119_: int = id v93_;
  v88_: ptr<int> = id v115_;
  v89_: int = id v116_;
  v90_: ptr<int> = id v117_;
  v91_: int = id v118_;
  v93_: int = id v119_;
  br v114_ .b94_ .b120_;
.b120_:
  v78_: int = id v87_;
  v79_: ptr<int> = id v88_;
  v80_: int = id v89_;
  v81_: ptr<int> = id v90_;
  v82_: int = id v91_;
  v83_: int = id v92_;
  v84_: int = id v93_;
.b86_:
  v121_: int = add c74_ v78_;
  v122_: int = add c74_ v121_;
  v123_: int = add c74_ v122_;
  v124_: bool = lt v16_ v123_;
  c125_: int = const 0;
  v126_: bool = lt v16_ c125_;
  v127_: bool = or v124_ v126_;
  v128_: int = add c74_ v1;
  v129_: bool = lt v78_ v128_;
  v130_: bool = lt v78_ c125_;
  v131_: bool = or v129_ v130_;
  v132_: ptr<int> = ptradd v81_ v121_;
  v133_: int = load v132_;
  store v132_ v77_;
  store v79_ v133_;
  br v131_ .b134_ .b135_;
.b135_:
  v136_: int = call @partition v0 v1 v78_;
  c137_: int = const 1;
  v138_: int = add c137_ v136_;
  v139_: int = sub v136_ c137_;
  call @qsort v0 v1 v139_;
  call @qsort v0 v138_ v78_;
.b134_:
  br v127_ .b72_ .b140_;
.b140_:
  v141_: int = call @partition v0 v122_ v16_;
  c142_: int = const 1;
  v143_: int = add c142_ v141_;
  v144_: int = sub v141_ c142_;
  call @qsort v0 v122_ v144_;
  call @qsort v0 v143_ v16_;
.b72_:
  br v65_ .b145_ .b146_;
.b145_:
  ret;
  jmp .b9_;
.b146_:
  c147_: int = const 1;
  v148_: bool = lt v60_ v2;
  v149_: ptr<int> = ptradd v0 v2;
  v150_: int = load v149_;
  v151_: int = id v59_;
  v152_: ptr<int> = id v149_;
  v153_: int = id v150_;
  v154_: ptr<int> = id v0;
  v155_: int = id c147_;
  v156_: int = id v60_;
  v157_: int = id v2;
  br v148_ .b158_ .b159_;
.b158_:
  v160_: int = id v59_;
  v161_: ptr<int> = id v149_;
  v162_: int = id v150_;
  v163_: ptr<int> = id v0;
  v164_: int = id c147_;
  v165_: int = id v60_;
  v166_: int = id v2;
.b167_:
  v168_: ptr<int> = ptradd v163_ v165_;
  v169_: int = load v168_;
  v170_: bool = le v169_ v162_;
  c171_: bool = const true;
  v172_: int = id v160_;
  v173_: ptr<int> = id v161_;
  v174_: int = id v162_;
  v175_: ptr<int> = id v163_;
  v176_: int = id v164_;
  v177_: bool = id c171_;
  v178_: int = id v165_;
  v179_: int = id v166_;
  br v170_ .b180_ .b181_;
.b180_:
  v182_: int = add v160_ v164_;
  v183_: ptr<int> = ptradd v163_ v182_;
  v184_: int = load v183_;
  store v168_ v184_;
  store v183_ v169_;
  c185_: bool = const true;
  v172_: int = id v182_;
  v173_: ptr<int> = id v161_;
  v174_: int = id v162_;
  v175_: ptr<int> = id v163_;
  v176_: int = id v164_;
  v177_: bool = id c185_;
  v178_: int = id v165_;
  v179_: int = id v166_;
.b181_:
  v186_: int = add v164_ v165_;
  v187_: bool = lt v186_ v166_;
  v160_: int = id v172_;
  v188_: ptr<int> = id v161_;
  v189_: int = id v162_;
  v190_: ptr<int> = id v163_;
  v191_: int = id v164_;
  v165_: int = id v186_;
  v192_: int = id v166_;
  v161_: ptr<int> = id v188_;
  v162_: int = id v189_;
  v163_: ptr<int> = id v190_;
  v164_: int = id v191_;
  v166_: int = id v192_;
  br v187_ .b167_ .b193_;
.b193_:
  v151_: int = id v160_;
  v152_: ptr<int> = id v161_;
  v153_: int = id v162_;
  v154_: ptr<int> = id v163_;
  v155_: int = id v164_;
  v156_: int = id v165_;
  v157_: int = id v166_;
.b159_:
  v194_: int = add c147_ v151_;
  v195_: int = add c147_ v194_;
  v196_: int = add c147_ v195_;
  v197_: bool = lt v2 v196_;
  c198_: int = const 0;
  v199_: bool = lt v2 c198_;
  v200_: bool = or v197_ v199_;
  v201_: bool = lt v151_ c198_;
  v202_: int = add c147_ v60_;
  v203_: bool = lt v151_ v202_;
  v204_: bool = or v201_ v203_;
  v205_: ptr<int> = ptradd v154_ v194_;
  v206_: int = load v205_;
  store v205_ v150_;
  store v152_ v206_;
  br v204_ .b207_ .b208_;
.b208_:
  v209_: int = call @partition v0 v60_ v151_;
  c210_: int = const 1;
  v211_: int = add c210_ v209_;
  v212_: int = sub v209_ c210_;
  call @qsort v0 v60_ v212_;
  call @qsort v0 v211_ v151_;
.b207_:
  br v200_ .b213_ .b214_;
.b213_:
  ret;
  jmp .b9_;
.b214_:
  v215_: int = call @partition v0 v195_ v2;
  c216_: int = const 1;
  v217_: int = add c216_ v215_;
  v218_: int = sub v215_ c216_;
  call @qsort v0 v195_ v218_;
  call @qsort v0 v217_ v2;
  ret;
.b9_:
}
@partition(v0: ptr<int>, v1: int, v2: int): int {
  c3_: int = const 1;
  v4_: bool = lt v1 v2;
  v5_: ptr<int> = ptradd v0 v2;
  v6_: int = load v5_;
  v7_: int = sub v1 c3_;
  v8_: int = id v7_;
  v9_: ptr<int> = id v5_;
  v10_: int = id v6_;
  v11_: ptr<int> = id v0;
  v12_: int = id c3_;
  v13_: int = id v1;
  v14_: int = id v2;
  br v4_ .b15_ .b16_;
.b15_:
  v17_: int = id v7_;
  v18_: ptr<int> = id v5_;
  v19_: int = id v6_;
  v20_: ptr<int> = id v0;
  v21_: int = id c3_;
  v22_: int = id v1;
  v23_: int = id v2;
.b24_:
  v25_: ptr<int> = ptradd v20_ v22_;
  v26_: int = load v25_;
  v27_: bool = le v26_ v19_;
  c28_: bool = const true;
  v29_: int = id v17_;
  v30_: ptr<int> = id v18_;
  v31_: int = id v19_;
  v32_: ptr<int> = id v20_;
  v33_: int = id v21_;
  v34_: bool = id c28_;
  v35_: int = id v22_;
  v36_: int = id v23_;
  br v27_ .b37_ .b38_;
.b37_:
  v39_: int = add v17_ v21_;
  v40_: ptr<int> = ptradd v20_ v39_;
  v41_: int = load v40_;
  store v25_ v41_;
  store v40_ v26_;
  c42_: bool = const true;
  v29_: int = id v39_;
  v30_: ptr<int> = id v18_;
  v31_: int = id v19_;
  v32_: ptr<int> = id v20_;
  v33_: int = id v21_;
  v34_: bool = id c42_;
  v35_: int = id v22_;
  v36_: int = id v23_;
.b38_:
  v43_: int = add v21_ v22_;
  v44_: bool = lt v43_ v23_;
  v17_: int = id v29_;
  v45_: ptr<int> = id v18_;
  v46_: int = id v19_;
  v47_: ptr<int> = id v20_;
  v48_: int = id v21_;
  v22_: int = id v43_;
  v49_: int = id v23_;
  v18_: ptr<int> = id v45_;
  v19_: int = id v46_;
  v20_: ptr<int> = id v47_;
  v21_: int = id v48_;
  v23_: int = id v49_;
  br v44_ .b24_ .b50_;
.b50_:
  v8_: int = id v17_;
  v9_: ptr<int> = id v18_;
  v10_: int = id v19_;
  v11_: ptr<int> = id v20_;
  v12_: int = id v21_;
  v13_: int = id v22_;
  v14_: int = id v23_;
  v51_: int = add c3_ v8_;
  v52_: ptr<int> = ptradd v11_ v51_;
  v53_: int = load v52_;
  store v52_ v6_;
  store v9_ v53_;
  ret v51_;
  jmp .b54_;
.b16_:
  v51_: int = add c3_ v8_;
  v52_: ptr<int> = ptradd v11_ v51_;
  v53_: int = load v52_;
  store v52_ v6_;
  store v9_ v53_;
  ret v51_;
.b54_:
}
@pack(v0: int, v1: int, v2: int, v3: int, v4: int, v5: int, v6: int): ptr<int> {
  v7_: ptr<int> = alloc v0;
  c8_: int = const 5;
  v9_: ptr<int> = ptradd v7_ c8_;
  c10_: int = const 4;
  v11_: ptr<int> = ptradd v7_ c10_;
  c12_: int = const 3;
  v13_: ptr<int> = ptradd v7_ c12_;
  c14_: int = const 2;
  v15_: ptr<int> = ptradd v7_ c14_;
  c16_: int = const 1;
  v17_: ptr<int> = ptradd v7_ c16_;
  c18_: int = const 0;
  v19_: ptr<int> = ptradd v7_ c18_;
  store v19_ v1;
  store v17_ v2;
  store v15_ v3;
  store v13_ v4;
  store v11_ v5;
  store v9_ v6;
  ret v7_;
}
@print_array(v0: ptr<int>, v1: int): int {
  c2_: int = const 0;
  v3_: bool = lt c2_ v1;
  c4_: int = const 1;
  v5_: int = id c2_;
  v6_: int = id c2_;
  v7_: int = id c4_;
  v8_: ptr<int> = id v0;
  v9_: int = id v1;
  br v3_ .b10_ .b11_;
.b10_:
  v12_: int = id c2_;
  v13_: int = id c2_;
  v14_: int = id c4_;
  v15_: ptr<int> = id v0;
  v16_: int = id v1;
.b17_:
  v18_: ptr<int> = ptradd v15_ v13_;
  v19_: int = load v18_;
  v20_: int = mul v13_ v19_;
  v21_: int = add v12_ v20_;
  v22_: int = add v13_ v14_;
  v23_: bool = lt v22_ v16_;
  v12_: int = id v21_;
  v13_: int = id v22_;
  v24_: int = id v14_;
  v25_: ptr<int> = id v15_;
  v26_: int = id v16_;
  v14_: int = id v24_;
  v15_: ptr<int> = id v25_;
  v16_: int = id v26_;
  br v23_ .b17_ .b27_;
.b27_:
  v5_: int = id v12_;
  v6_: int = id v13_;
  v7_: int = id v14_;
  v8_: ptr<int> = id v15_;
  v9_: int = id v16_;
  ret v5_;
  jmp .b28_;
.b11_:
  ret v5_;
.b28_:
}
@main(v0: int) {
  c1_: bool = const false;
  c2_: int = const 6;
  v3_: ptr<int> = alloc c2_;
  c4_: int = const 5;
  v5_: ptr<int> = ptradd v3_ c4_;
  c6_: int = const 46;
  c7_: int = const 4;
  v8_: ptr<int> = ptradd v3_ c7_;
  c9_: int = const 82;
  c10_: int = const 3;
  v11_: ptr<int> = ptradd v3_ c10_;
  c12_: int = const 2;
  v13_: ptr<int> = ptradd v3_ c12_;
  c14_: int = const 1;
  v15_: ptr<int> = ptradd v3_ c14_;
  c16_: int = const 21;
  c17_: int = const 0;
  v18_: ptr<int> = ptradd v3_ c17_;
  store v18_ v0;
  store v15_ c16_;
  store v13_ c4_;
  store v11_ c2_;
  store v8_ c9_;
  store v5_ c6_;
  br c1_ .b19_ .b20_;
.b19_:
  v21_: int = id c17_;
  v22_: int = id c17_;
  v23_: int = id c14_;
  v24_: ptr<int> = id v3_;
  v25_: int = id c2_;
.b26_:
  v27_: ptr<int> = ptradd v24_ v22_;
  v28_: int = load v27_;
  v29_: int = mul v22_ v28_;
  v30_: int = add v21_ v29_;
  v31_: int = add v22_ v23_;
  v32_: bool = lt v31_ v25_;
  v21_: int = id v30_;
  v22_: int = id v31_;
  v33_: int = id v23_;
  v34_: ptr<int> = id v24_;
  v35_: int = id v25_;
  v23_: int = id v33_;
  v24_: ptr<int> = id v34_;
  v25_: int = id v35_;
  br v32_ .b26_ .b36_;
.b20_:
  v37_: ptr<int> = ptradd v3_ c4_;
  v38_: int = load v37_;
  c39_: int = const -1;
  c40_: int = const 1;
  v41_: int = add c40_ v38_;
  v42_: int = id c39_;
  v43_: ptr<int> = id v37_;
  v44_: int = id v38_;
  v45_: ptr<int> = id v3_;
  v46_: int = id c40_;
  v47_: int = id c17_;
  v48_: int = id c4_;
  v49_: int = id v41_;
.b50_:
  v51_: ptr<int> = ptradd v45_ v47_;
  v52_: int = load v51_;
  v53_: bool = le v52_ v44_;
  c54_: bool = const true;
  v55_: int = id v42_;
  v56_: ptr<int> = id v43_;
  v57_: int = id v44_;
  v58_: ptr<int> = id v45_;
  v59_: int = id v46_;
  v60_: bool = id c54_;
  v61_: int = id v47_;
  v62_: int = id v48_;
  br v53_ .b63_ .b64_;
.b63_:
  v65_: int = add v42_ v46_;
  v66_: ptr<int> = ptradd v45_ v65_;
  v67_: int = load v66_;
  store v51_ v67_;
  store v66_ v52_;
  c68_: bool = const true;
  v55_: int = id v65_;
  v56_: ptr<int> = id v43_;
  v57_: int = id v44_;
  v58_: ptr<int> = id v45_;
  v59_: int = id v46_;
  v60_: bool = id c68_;
  v61_: int = id v47_;
  v62_: int = id v48_;
.b64_:
  v69_: int = add v46_ v47_;
  v70_: bool = lt v69_ v48_;
  v42_: int = id v55_;
  v71_: ptr<int> = id v43_;
  v72_: int = id v44_;
  v73_: ptr<int> = id v45_;
  v74_: int = id v46_;
  v47_: int = id v69_;
  v75_: int = id v48_;
  v76_: int = id v49_;
  v43_: ptr<int> = id v71_;
  v44_: int = id v72_;
  v45_: ptr<int> = id v73_;
  v46_: int = id v74_;
  v48_: int = id v75_;
  v49_: int = id v76_;
  br v70_ .b50_ .b77_;
.b77_:
  v78_: int = add c39_ c39_;
  v79_: int = add v42_ v78_;
  v80_: int = add c4_ v79_;
  v81_: bool = lt c4_ v80_;
  v82_: bool = lt v42_ c40_;
  v83_: bool = lt v42_ c17_;
  v84_: bool = or v82_ v83_;
  v85_: int = add c40_ v42_;
  v86_: ptr<int> = ptradd v45_ v85_;
  v87_: int = load v86_;
  store v86_ v38_;
  store v43_ v87_;
  br v84_ .b88_ .b89_;
.b89_:
  v90_: int = call @partition v3_ c17_ v42_;
  v91_: int = add c40_ v90_;
  v92_: int = sub v90_ c40_;
  call @qsort v3_ c17_ v92_;
  call @qsort v3_ v91_ v42_;
.b88_:
  v93_: int = add c39_ v78_;
  v94_: int = add v42_ v93_;
  v95_: int = add c4_ v94_;
  br v81_ .b96_ .b97_;
.b96_:
  v21_: int = id c17_;
  v22_: int = id c17_;
  v23_: int = id c14_;
  v24_: ptr<int> = id v3_;
  v25_: int = id c2_;
  jmp .b26_;
.b97_:
  v98_: int = call @partition v3_ v95_ c4_;
  c99_: int = const 1;
  v100_: int = add c99_ v98_;
  v101_: int = sub v98_ c99_;
  call @qsort v3_ v95_ v101_;
  call @qsort v3_ v100_ c4_;
  v21_: int = id c17_;
  v22_: int = id c17_;
  v23_: int = id c14_;
  v24_: ptr<int> = id v3_;
  v25_: int = id c2_;
  jmp .b26_;
.b36_:
  free v3_;
  print v21_;
  ret;
}
