tests/snapshots/files__range_check-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: int = const 0;
  v2_: int = id c1_;
.b3_:
  c4_: int = const 5;
  v5_: bool = lt v2_ c4_;
  br v5_ .b6_ .b7_;
.b6_:
  c8_: int = const 1;
  print c8_;
  v9_: int = id v2_;
.b10_:
  c11_: int = const 1;
  v12_: int = add c11_ v2_;
  c13_: int = const 6;
  v14_: bool = lt v2_ c13_;
  v2_: int = id v12_;
  br v14_ .b3_ .b15_;
.b7_:
  c16_: int = const 2;
  print c16_;
  v9_: int = id v2_;
  jmp .b10_;
.b15_:
  print v2_;
  ret;
}
