tests/snapshots/files__range_splitting-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: int = const 0;
  v2_: int = id c1_;
.b3_:
  c4_: int = const 5;
  v5_: bool = lt v2_ c4_;
  br v5_ .b6_ .b7_;
.b6_:
  c8_: int = const 1;
  print c8_;
  v9_: int = id v2_;
.b10_:
  c11_: int = const 1;
  v12_: int = add c11_ v2_;
  v13_: bool = lt v12_ c4_;
  v2_: int = id v12_;
  br v13_ .b3_ .b14_;
.b7_:
  c15_: int = const 2;
  print c15_;
  v9_: int = id v2_;
  jmp .b10_;
.b14_:
  print v2_;
  ret;
}
