tests/snapshots/files__reassoc-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
snapshot_kind: text
---
# ARGS: 2 4
@main(v0: int, v1: int) {
  c2_: int = const 1;
  c3_: int = const 3;
  v4_: int = add c3_ v0;
  c5_: int = const 4;
  v6_: int = add c5_ v1;
  v7_: int = add v4_ v6_;
  v8_: int = add c2_ v7_;
  print v8_;
  ret;
}
