tests/snapshots/files__reassoc-peg.snap
---
source: tests/files.rs
expression: visualization.result
---
digraph G {
subgraph {
node [ordering=out];
v0 [label="int"];
v1 [label="arg 0"];
v2 [label="int"];
v3 [label="add"];
v4 [label="arg 1"];
v5 [label="int"];
v6 [label="add"];
v7 [label="add"];
v8 [label="add"];
v9 [label="arg 2"];
v10 [label="PRINT"];
v3 -> v1;
v3 -> v2;
v6 -> v4;
v6 -> v5;
v7 -> v3;
v7 -> v6;
v8 -> v0;
v8 -> v7;
v10 -> v8;
v10 -> v9;
}
}

