tests/snapshots/files__reassociate_add.snap
---
source: tests/files.rs
expression: "format!(\"{}\", res)"
---
@add_reassoc(x: int, y: int, z: int) {
  v0_: int = add z 11;
  v1_: int = add y v0_;
  v2_: int = mul x 2;
  v3_: int = add v1_ v2_;
  ret v3_;
}
@main {
  ret;
}

